gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: frontend-gateway
spec:
  gatewayClassName: istio
  listeners:
    - name: default
      hostname: "*.amazonaws.com"
      port: 80
      protocol: HTTP
